--- a/src/client/index.css
+++ b/src/client/index.css
@@ -1,5 +1,6 @@
 button {
-  background-color: #4caf50; /* Green */
+  background-color: #4caf50;
+  border-radius: 6px;
   border: none;
   color: white;
   padding: 15px 32px;
